automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Level 3 'WRITTEN BY...' Header -->
         <p>PUBLISHED BY...<P>
         <!-- pararaph text 'PUBLISHED BY...' -->
-        <span style "color:blue">PHARRELLWILLIAMS.COM</span>
+        <span>PHARRELLWILLIAMS.COM</span>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
