automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Level 1 'HAPPY' Header -->
         <h3>WRITTEN BY...</h3>
         <!-- Level 3 'WRITTEN BY...' Header -->
-        <p>PUBLISHED BY...<P>
+        <p>PUBLISHED BY...</P>
         <!-- pararaph text 'PUBLISHED BY...' -->
         <span>PHARRELLWILLIAMS.COM</span>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
